# centback

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
centback/api/: v1.py
centback/data/: bannedwords.csv  europade.csv  info.ipynb  keywords.csv  stellenmarktdirektde.csv
centback/scripts/: europade.ipynb  stellenmarktdirektde.ipynb
centback/urls/: ebayde.csv  ebayde.ipynb  europade_urls.ipynb  hokify.ipynb  meinestadtde.ipynb  stellenanzeigende.ipynb  stellenmarktdirektde_urls.csv  stellenmarktdirektde_urls.ipynb
config/: main.py  settings.py
