[tool.poetry]
name = "centback"
version = "0.1.0"
description = ""
authors = ["BesfortBunjaku <bessffort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
emailaddress = {version = "^1.0.2", source = "ppypi"}
dataextension = {version = "^2.2.3", source = "ppypi"}


[[tool.poetry.source]]
name = "ppypi"
url = "http://localhost:8080/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
